# spmod-web

./: .gitignore  LICENSE.md  README.md  composer.json  ecosystem.config.js  gulpfile.js  index.php  package-lock.json  package.json  rollup.config.js
api/: config.js  index.js
api/app/: index.js  storage.js
api/app/routes/: app.js  aws.js  builds.js  index.js
backend/: .env  .gitignore  CMakeLists.txt  cache.sqlite3  composer.json  index.php  spmod.sqlite3
backend/config/: SPModWeb.json
backend/include/: ApiRequestHandler.hpp  AwsRequestHandler.hpp  BadRequestHandler.hpp  RequestHandlerFactory.hpp  WebServer.hpp  spmodweb.hpp
backend/install/: install.sh
backend/src/: ApiRequestHandler.cpp  AwsRequestHandler.cpp  BadRequestHandler.cpp  RequestHandlerFactory.cpp  WebServer.cpp
backend/src/App/: AbstractController.php  AbstractModel.php  Aws.php  Cache.php  Database.php  Kernel.php  Model.php
backend/src/Controller/: AwsController.php  BuildController.php
backend/src/Model/: Builds.php  Commits.php
config/: config.example.json
frontend/: index.html
frontend/public/css/: spmod.css
frontend/public/js/: framework.js
htdocs/static/css/: spmod.css  spmod.css.map  spmod.scss
install/: install.sh
lib/http-server/: package-lock.json  package.json
lib/http-server/src/: index.js  request.js  response.js  router.js  server.js
public/: index.html
public/css/: main.css
public/static/css/: all.css  normalize.css  spmod.css
public/static/js/: spmod.js
public/styles/: style.css  style.css.map
resources/scss/: base.scss  main.scss
src/: Core.php  View.php  app.js  base.hbs  index.js  server.js  storage.js
src/assets/: main.scss
src/assets/base/: base.scss
src/assets/components/: error.scss  table.scss
src/assets/js/: main.js
src/assets/layout/: content.scss  footer.scss  header.scss
src/assets/scss/: base.scss  layout.scss  main.scss  variables.scss
src/aws/: aws.js  controller.js  index.js  routes.js
src/builds/: controller.js  index.js  routes.js
src/config/: index.example.js  index.js
src/controller/: builds.js  index.js
src/main/: controller.js  index.js  routes.js
src/router/: app.js  aws.js  index.js
src/routes/: app.js  aws.js  builds.js
src/storage/: index.js
src/store/: index.js  store.js
src/template/: build.js  home.js  index.js
src/template/base/: base.js  footer.js  headers.js
src/template/errors/: 404.js
templates/: base.twig  index.twig
web/: index.html  spmod.js  spmod.scss
web/Builds/: builds.js
web/Footer/: footer.js  footer.scss
web/Header/: header.js  header.scss
web/Home/: home.js
web/Utils/: index.js
web/public/css/: spmod.css
web/public/js/: framework.js
web/src/: index.js
web/src/App/: app.js  app.scss
web/src/Builds/: builds.js  index.js
web/src/Footer/: footer.js  footer.scss
web/src/Header/: header.js  header.scss
web/src/Home/: home.js
